#793 #788 fixed png exporting flickering issues. Updated images for chart types

--- a/mapcomposer/app/static/theme/app/mapstore.css
+++ b/mapcomposer/app/static/theme/app/mapstore.css
@@ -411,6 +411,6 @@ div#homelogos ul li a:hover {
     width: auto !important;
     height: auto !important;
     max-height: auto !important;
-    /* z-index : -1 !important; */
+    z-index : -1 !important;
     padding : 0px !important;
 }
